feat: CRUD for task with orval
